# biomed_querygenius

./: .gitignore  README.md  abstract_qa.py  abstract_summarizer.py  fix_llamacpp_setup.py  inference_example.py  main.py  merge_training_jsonl_files.py  merged.jsonl  mlx_to_ollama_pipeline.py  phi3_mlx_training.py  postgres_query_tester.py  predownload_model.py  pyproject.toml  qa2024_01_06.jsonl  quick_generation_test.py  setup_jsonl_workflow.sh  setup_requirements.sh  smart_training_params.py  test_data_preparation.py  test_qas_format.py  usage_guide.md
data/: train.jsonl  valid.jsonl
examples/: format_comparison.py
human_verified_training_data/: training_data.jsonl
mergable_data/: medqa.jsonl  qa2024_01_06.jsonl  summaries.jsonl  synthetic.jsonl
scripts/: convert2phi3mlxformat.py  convert_data.py  jsonl_to_text.py  test_convert2phi3mlxformat.py  text_to_jsonl.py
synthetic_data/: claude_opus4_medical_query_training_data.txt  qa6mtil20241231.jsonl
