[project]
name = "pg-fulltext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "matplotlib>=3.7.0",
    "mlx>=0.26.2",
    "mlx-lm>=0.25.3",
    "numpy<2.0",
    "ollama>=0.5.1",
    "pandas>=2.0.0",
    "psycopg2>=2.9.10",
    "safetensors>=0.5.3",
    "tokenizers>=0.21.2",
    "transformers>=4.53.1",
]
